--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html{
-    width:100%
-    height:100%
-    backround-color:black
+    width:100%;
+    height:100%;
+    background-color:black;
 }
